Organização dos algoritmos de teste e pequenas correções no delete e insert, porem ainda não está bom